--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -417,7 +417,7 @@
                         "refresh": "更新",
                         "gps": "GPS:",
                         "status": "ステータス:",
-                        "bio": "プロフィール:",
+                        "bio": "自己紹介:",
                         "avatar": "アバター:",
                         "online_offline": "オンライン/オフライン:",
                         "friend_log_history": "フレンドログ履歴:",
@@ -432,43 +432,43 @@
                 "photon": {
                     "header": "Photon ログオーバーレイ",
                     "event_hud": {
-                        "header": "Photon Event HUD",
-                        "enable": "Enable",
-                        "enable_tooltip": "Requires SteamVR overlay to be enabled",
-                        "filter": "Filter",
-                        "filter_favorites": "Favorites",
-                        "filter_friends": "Friends",
-                        "filter_everyone": "Everyone",
-                        "message_timeout": "Message Timeout"
+                        "header": "Photon イベント HUD",
+                        "enable": "有効化",
+                        "enable_tooltip": "使用するにはSteamVR オーバーレイが必要です",
+                        "filter": "フィルター",
+                        "filter_favorites": "お気に入り",
+                        "filter_friends": "フレンド",
+                        "filter_everyone": "全員",
+                        "message_timeout": "メッセージタイムアウト"
                     },
                     "timeout_hud": {
-                        "header": "User Timeout HUD",
-                        "enable": "Enable",
-                        "enable_tooltip": "Requires SteamVR overlay to be enabled",
-                        "filter": "Filter",
-                        "filter_favorites": "Favorites",
-                        "filter_friends": "Friends",
-                        "filter_everyone": "Everyone",
-                        "timeout_threshold": "Timeout Threshold"
+                        "header": "ユーザータイムアウト HUD",
+                        "enable": "有効化",
+                        "enable_tooltip": "使用するにはSteamVR オーバーレイが必要です",
+                        "filter": "フィルター",
+                        "filter_favorites": "お気に入り",
+                        "filter_friends": "フレンド",
+                        "filter_everyone": "全員",
+                        "timeout_threshold": "タイムアウトのしきい値"
                     }
                 }
             }
         }
     },
     "side_panel": {
-        "search_placeholder": "Search",
-        "search_result_active": "Offline",
-        "search_result_offline": "Active",
-        "search_result_more": "Search More:",
-        "direct_access_tooltip": "Direct access ID/URL from clipboard",
-        "refresh_tooltip": "Refresh friends",
-        "friends": "FRIENDS",
-        "me": "ME",
-        "favorite": "FAVORITES",
-        "online": "ONLINE",
-        "active": "ACTIVE",
-        "offline": "OFFLINE",
-        "pending_offline": "Pending Offline"
+        "search_placeholder": "検索",
+        "search_result_active": "オフライン",
+        "search_result_offline": "アクティブ",
+        "search_result_more": "もっと検索:",
+        "direct_access_tooltip": "クリップボードからID/URLに直接アクセス",
+        "refresh_tooltip": "フレンドを更新",
+        "friends": "フレンド",
+        "me": "自分",
+        "favorite": "お気に入り",
+        "online": "オンライン",
+        "active": "アクティブ",
+        "offline": "オフライン",
+        "pending_offline": "オフライン (保留)"
     },
     "dialog": {
         "user": {
@@ -480,97 +480,97 @@
                 "ask_me": "Ask Me",
                 "busy": "Do Not Disturb"
             },
-            "previous_display_names": "Previous Display Names:",
+            "previous_display_names": "以前の表示名:",
             "tags": {
-                "friend_no": "Friend No.{number}",
+                "friend_no": "フレンド No.{number}",
                 "vrchat_team": "VRChat Team"
             },
             "actions": {
-                "favorite_tooltip": "Add to favorites",
-                "unfavorite_tooltip": "Remove from favorites",
-                "refresh": "Refresh",
-                "copy_url": "Copy User URL",
-                "invite": "Invite",
-                "invite_with_message": "Invite With Message",
-                "request_invite": "Request Invite",
-                "request_invite_with_message": "Request Invite With Message",
-                "invite_to_group": "Invite To Group",
-                "manage_gallery_icon": "Manage Gallery/Icons",
-                "accept_friend_request": "Accept Friend Request",
-                "decline_friend_request": "Decline Friend Request",
-                "cancel_friend_request": "Cancel Friend Request",
-                "send_friend_request": "Send Friend Request",
-                "show_avatar_author": "Show Avatar Author",
-                "show_fallback_avatar": "Show Fallback Avatar Details",
-                "show_previous_instances": "Show Previous Instances",
-                "show_previous_images": "Show Previous Images",
-                "moderation_block": "Block",
-                "moderation_unblock": "Unblock",
-                "moderation_mute": "Mute",
-                "moderation_unmute": "Unmute",
-                "moderation_hide_avatar": "Hide Avatar",
-                "moderation_show_avatar": "Show Avatar",
-                "moderation_enable_avatar_interaction": "Enable Avatar Interaction",
-                "moderation_disable_avatar_interaction": "Disable Avatar Interaction",
-                "edit_status": "Social Status",
-                "edit_language": "Language",
-                "edit_bio": "Bio",
-                "report_hacking": "Report For Hacking",
-                "unfriend": "Unfriend",
-                "logout": "Logout"
+                "favorite_tooltip": "お気に入りに追加",
+                "unfavorite_tooltip": "お気に入りから削除",
+                "refresh": "更新",
+                "copy_url": "ユーザーURLをコピー",
+                "invite": "招待を送信",
+                "invite_with_message": "メッセージ付き招待を送信",
+                "request_invite": "招待リクエストを送信",
+                "request_invite_with_message": "メッセージ付き招待リクエストを送信",
+                "invite_to_group": "グループに招待",
+                "manage_gallery_icon": "ギャラリー/アイコンを管理",
+                "accept_friend_request": "フレンドリクエストを許可",
+                "decline_friend_request": "フレンドリクエストを拒否",
+                "cancel_friend_request": "フレンドリクエストをキャンセル",
+                "send_friend_request": "フレンドリクエストを送信",
+                "show_avatar_author": "アバター制作者を表示",
+                "show_fallback_avatar": "フォールバックアバターの詳細を表示",
+                "show_previous_instances": "以前のインスタンス",
+                "show_previous_images": "以前の画像",
+                "moderation_block": "ブロック",
+                "moderation_unblock": "ブロック解除",
+                "moderation_mute": "ミュート",
+                "moderation_unmute": "ミュート解除",
+                "moderation_hide_avatar": "アバターを非表示",
+                "moderation_show_avatar": "アバターを表示",
+                "moderation_enable_avatar_interaction": "アバターインタラクションを有効化",
+                "moderation_disable_avatar_interaction": "アバターインタラクションを無効化",
+                "edit_status": "ソーシャルステータスを変更",
+                "edit_language": "言語を変更",
+                "edit_bio": "自己紹介を変更",
+                "report_hacking": "ハッキングを通報",
+                "unfriend": "フレンド解除",
+                "logout": "ログアウト"
             },
             "info": {
-                "header": "Info",
-                "launch_invite_tooltip": "Launch/Invite",
-                "self_invite_tooltip": "Invite Yourself",
-                "refresh_user_count_tooltip": "Refresh User Count",
-                "instance_creator": "Instance Creator",
-                "note": "Note",
-                "note_placeholder": "Click to add a note",
-                "memo": "Memo",
-                "memo_placeholder": "Click to add a memo",
-                "avatar_info": "Avatar Info",
-                "avatar_info_last_seen": "Avatar Info Last Seen",
-                "represented_group": "Represented Group",
-                "bio": "Bio",
-                "last_seen": "Last Seen",
-                "join_count": "Join Count",
-                "time_together": "Time Together",
-                "online_for": "Online For",
-                "offline_for": "Offline For",
-                "last_activity": "Last Activity",
-                "last_login": "Last Login",
-                "date_joined": "Date Joined",
-                "friended": "Friended",
-                "unfriended": "Unfriended",
-                "avatar_cloning": "Avatar Cloning",
-                "avatar_cloning_allow": "Allowed",
-                "avatar_cloning_deny": "Deny",
-                "home_location": "Home Location",
-                "accuracy_notice": "Info from local database may not be accurate"
+                "header": "情報",
+                "launch_invite_tooltip": "起動/招待",
+                "self_invite_tooltip": "自分を招待",
+                "refresh_user_count_tooltip": "ユーザー数を更新",
+                "instance_creator": "インスタンス作成者",
+                "note": "ノート (VRChat)",
+                "note_placeholder": "クリックしてノートを追加",
+                "memo": "メモ (VRCX)",
+                "memo_placeholder": "クリックしてメモを追加",
+                "avatar_info": "アバター情報",
+                "avatar_info_last_seen": "最後に見たアバター情報",
+                "represented_group": "代表しているグループ",
+                "bio": "自己紹介",
+                "last_seen": "最後に見た日付",
+                "join_count": "Joinした回数",
+                "time_together": "一緒に居た時間",
+                "online_for": "オンライン時間",
+                "offline_for": "オフライン時間",
+                "last_activity": "最終活動時間",
+                "last_login": "最終ログイン日",
+                "date_joined": "アカウント作成日",
+                "friended": "フレンドになった日",
+                "unfriended": "フレンド解除した日",
+                "avatar_cloning": "アバタークローン",
+                "avatar_cloning_allow": "許可",
+                "avatar_cloning_deny": "拒否",
+                "home_location": "ホームワールド",
+                "accuracy_notice": "ローカルデータベースからの情報であり、正確ではない可能性があります"
             },
             "groups": {
-                "header": "Groups",
-                "total_count": "Total {count}",
-                "own_groups": "Own Groups",
-                "mutual_groups": "Mutual Groups",
-                "groups": "Groups"
+                "header": "グループ",
+                "total_count": "{count} 個のグループ",
+                "own_groups": "自分のグループ",
+                "mutual_groups": "共通グループ",
+                "groups": "グループ"
             },
             "worlds": {
-                "header": "Worlds",
-                "total_count": "Total {count}",
-                "sort_by_name": "Sort by name",
-                "sort_by_update": "Sort by update"
+                "header": "ワールド",
+                "total_count": "{count} 個のワールド",
+                "sort_by_name": "名前順",
+                "sort_by_update": "更新順"
             },
             "favorite_worlds": {
-                "header": "Favorite Worlds"
+                "header": "お気に入りワールド"
             },
             "avatars": {
-                "header": "Avatars",
-                "total_count": "Total {count}",
-                "sort_by_name": "Sort by name",
-                "sort_by_update": "Sort by update",
-                "all": "All",
+                "header": "アバター",
+                "total_count": "{count} 個のアバター",
+                "sort_by_name": "名前順",
+                "sort_by_update": "更新順",
+                "all": "全て",
                 "public": "Public",
                 "private": "Private"
             },
