translate to world actions

--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -582,28 +582,28 @@
             "tags": {
                 "public": "Public",
                 "private": "Private",
-                "labs": "Labs",
-                "cache": "Cache"
+                "labs": "ラボ",
+                "cache": "キャッシュ"
             },
             "actions": {
-                "delete_cache_tooltip": "Delete world from cache",
-                "favorites_tooltip": "Favorites",
-                "refresh": "Refresh",
-                "new_instance": "New Instance",
-                "make_home": "Make Home",
-                "reset_home": "Reset Home",
-                "show_previous_instances": "Show Previous Instances",
-                "show_previous_images": "Show Previous Images",
-                "rename": "Rename",
-                "change_description": "Change Description",
-                "change_capacity": "Change Capacity",
-                "change_preview": "Change Youtube Preview",
-                "change_tags": "Change Tags",
-                "change_image": "Change Image",
-                "download_package": "Download Unity Package",
-                "publish_to_labs": "Publish To Labs",
-                "unpublish": "Unpublish",
-                "delete": "Delete"
+                "delete_cache_tooltip": "キャッシュからワールドを削除",
+                "favorites_tooltip": "お気に入り",
+                "refresh": "更新",
+                "new_instance": "インスタンスを作成",
+                "make_home": "ホームに設定",
+                "reset_home": "ホームをリセット",
+                "show_previous_instances": "以前のインスタンス",
+                "show_previous_images": "以前の画像",
+                "rename": "名前を変更",
+                "change_description": "説明を変更",
+                "change_capacity": "最大人数を変更",
+                "change_preview": "YouTubeプレビュー動画を変更",
+                "change_tags": "タグを変更",
+                "change_image": "画像を変更",
+                "download_package": "Unity Packageをダウンロード",
+                "publish_to_labs": "ラボに公開",
+                "unpublish": "非公開化",
+                "delete": "削除"
             },
             "instances": {
                 "header": "Instances",
