--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -924,33 +924,33 @@
             "header": "お気に入りアバターをエクスポート"
         },
         "avatar_import": {
-            "header": "Avatar Favorites Import",
-            "description": "Enter a list of avatar IDs",
-            "process_list": "Process List",
-            "process_progress": "Progress:",
-            "select_group_placeholder": "Select Group",
-            "import": "Import Avatars",
-            "cancel": "Cancel",
-            "import_progress": "Import Progress:",
-            "clear_table": "Clear Table",
-            "errors": "Errors:",
-            "clear_errors": "Clear Errors"
+            "header": "お気に入りアバターをインポート",
+            "description": "アバターIDのリストを入力してください",
+            "process_list": "処理リスト",
+            "process_progress": "進捗:",
+            "select_group_placeholder": "グループを選択",
+            "import": "アバターをインポート",
+            "cancel": "キャンセル",
+            "import_progress": "インポート進捗:",
+            "clear_table": "テーブルを消去",
+            "errors": "エラー:",
+            "clear_errors": "エラーを消去"
         },
         "friend_export": {
-            "header": "Friend Favorites Export"
+            "header": "お気に入りフレンドをエクスポート"
         },
         "friend_import": {
-            "header": "Friend Favorites Import",
-            "description": "Enter a list of user IDs",
-            "process_list": "Process List",
-            "process_progress": "Progress:",
-            "select_group_placeholder": "Select Group",
-            "import": "Import Friends",
-            "cancel": "Cancel",
-            "import_progress": "Import Progress:",
-            "clear_table": "Clear Table",
-            "errors": "Errors:",
-            "clear_errors": "Clear Errors"
+            "header": "お気に入りフレンドをインポート",
+            "description": "ユーザーIDのリストを入力してください",
+            "process_list": "処理リスト",
+            "process_progress": "進捗:",
+            "select_group_placeholder": "グループを選択",
+            "import": "フレンドをインポート",
+            "cancel": "キャンセル",
+            "import_progress": "インポート進捗:",
+            "clear_table": "テーブルを消去",
+            "errors": "エラー:",
+            "clear_errors": "エラーを消去"
         },
         "avatar_database_provider": {
             "header": "Avatar Database Provider",
